change view binding in fragment

--- a/app/src/main/res/layout/fragment_follows.xml
+++ b/app/src/main/res/layout/fragment_follows.xml
@@ -13,12 +13,13 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_follows"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:overScrollMode="never"
             android:scrollbarSize="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
